--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -3458,6 +3458,7 @@ en:
   subject_re: "Re: "
   subject_pm: "[PM] "
   email_from: "%{user_name} via %{site_name}"
+  email_from_without_site: "%{user_name}"
 
   user_notifications:
     previous_discussion: "Previous Replies"
