FEATURE: Attach backup log as upload
Discourse automatically sends a private message after backup finished.
The private message used to contain the log inline, but that is a
problem if the log is very long because the length of the post will be
over the maximum allowed length of a post.

--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -2982,11 +2982,7 @@ en:
 
         Visit the [admin > backup section](%{base_url}/admin/backups) to download your new backup.
 
-        Here's the log:
-
-        ``` text
-        %{logs}
-        ```
+        Here's the log: %{logs}
 
     backup_failed:
       title: "Backup Failed"
@@ -2994,11 +2990,7 @@ en:
       text_body_template: |
         The backup has failed.
 
-        Here's the log:
-
-        ``` text
-        %{logs}
-        ```
+        Here's the log: %{logs}
 
     restore_succeeded:
       title: "Restore Succeeded"
