FEATURE: Add post edits count to user activity (#13495)

--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -4855,6 +4855,8 @@ en:
         delete_all_posts: "Delete all posts"
         delete_posts_progress: "Deleting posts..."
         delete_posts_failed: "There was a problem deleting the posts."
+        post_edits: "Post Edits"
+        view_edits: "View Edits"
         penalty_post_actions: "What would you like to do with the associated post?"
         penalty_post_delete: "Delete the post"
         penalty_post_delete_replies: "Delete the post + any replies"
@@ -4913,6 +4915,7 @@ en:
         approve_success: "User approved and email sent with activation instructions."
         approve_bulk_success: "Success! All selected users have been approved and notified."
         time_read: "Read Time"
+        post_edits_count: "Post Edits"
         anonymize: "Anonymize User"
         anonymize_confirm: "Are you SURE you want to anonymize this account? This will change the username and email, and reset all profile information."
         anonymize_yes: "Yes, anonymize this account"
