--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -2369,11 +2369,11 @@ en:
           other: "Dismiss New (%{count})"
         toggle: "toggle bulk selection of topics"
         actions: "Bulk Actions"
-        change_category: "Set Category"
+        change_category: "Set Category..."
         close_topics: "Close Topics"
         archive_topics: "Archive Topics"
         move_messages_to_inbox: "Move to Inbox"
-        notification_level: "Notifications"
+        notification_level: "Notifications..."
         change_notification_level: "Change Notification Level"
         choose_new_category: "Choose the new category for the topics:"
         selected:
@@ -2669,7 +2669,7 @@ en:
         open: "Open Topic"
         close: "Close Topic"
         multi_select: "Select Posts…"
-        slow_mode: "Set Slow Mode"
+        slow_mode: "Set Slow Mode..."
         timed_update: "Set Topic Timer..."
         pin: "Pin Topic…"
         unpin: "Un-Pin Topic…"
@@ -2678,7 +2678,7 @@ en:
         invisible: "Make Unlisted"
         visible: "Make Listed"
         reset_read: "Reset Read Data"
-        make_public: "Make Public Topic"
+        make_public: "Make Public Topic..."
         make_private: "Make Personal Message"
         reset_bump_date: "Reset Bump Date"
 
@@ -3008,8 +3008,8 @@ en:
         rebake: "Rebuild HTML"
         publish_page: "Page Publishing"
         unhide: "Unhide"
-        change_owner: "Change Ownership"
-        grant_badge: "Grant Badge"
+        change_owner: "Change Ownership..."
+        grant_badge: "Grant Badge..."
         lock_post: "Lock Post"
         lock_post_description: "prevent the poster from editing this post"
         unlock_post: "Unlock Post"
@@ -3023,8 +3023,8 @@ en:
         delete_topic_confirm_modal_no: "No, keep this topic"
         delete_topic_error: "An error occurred while deleting this topic"
         delete_topic: "delete topic"
-        add_post_notice: "Add Staff Notice"
-        change_post_notice: "Change Staff Notice"
+        add_post_notice: "Add Staff Notice..."
+        change_post_notice: "Change Staff Notice..."
         delete_post_notice: "Delete Staff Notice"
         remove_timer: "remove timer"
         edit_timer: "edit timer"
