UX: update member visibility help text to include flair information
This commit updates group member visibility help text to include the
flair visibility information.

--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -3919,6 +3919,7 @@ en:
             members_visibility_levels:
               title: "Who can see this group's members?"
               description: "Admins can see members of all groups."
+              description_flair_visible: "Admins can see members of all groups. Flair is visible to all users."
             publish_read_state: "On group messages publish group read state"
 
           membership:
