--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -1427,6 +1427,12 @@ en:
         ignores_count: Ignores count
         mutes_count: Mutes count
       description: "Users who have been muted and/or ignored by many other users."
+    top_users_by_received_likes:
+      title: "Top Users by received likes"
+      labels:
+        user: User
+        qtt_like: Received Likes
+      description: "Top 10 users who have been received more likes."
 
   dashboard:
     rails_env_warning: "Your server is running in %{env} mode."
