--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -4860,7 +4860,7 @@ en:
 
       styling:
         title: "Styling"
-        description: "Your community's appearance is very important. Below you can do some basic customizations for colors and fonts. You can also visit the admin interface later and do more in-depth styling changes."
+        description: "Your community's appearance is important. Use the fields below to do some basic customizations or skip this for now and use the admin interface to do more in-depth styling changes later."
         fields:
           color_scheme:
             label: "Color scheme"
