--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -5095,3 +5095,5 @@ en:
       other: "%{topic_title} (Part %{count})"
     post_raw: "Continuing the discussion from %{parent_url}.\n\nPrevious discussions:\n\n%{previous_topics}"
     small_action_post_raw: "Continue discussion at %{new_title}."
+
+  fallback_username: "user"
