More WIP for full search page

--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -2335,7 +2335,7 @@ en:
         one: "<span>%{count} result for</span><span class='term'>%{term}</span>"
         other: "<span>%{count}%{plus} results for</span><span class='term'>%{term}</span>"
       title: "search topics, posts, users, or categories"
-      full_page_title: "search topics or posts"
+      full_page_title: "Search"
       no_results: "No results found."
       no_more_results: "No more results found."
       post_format: "#%{post_number} by %{username}"
@@ -2347,6 +2347,7 @@ en:
       search_google: "Try searching with Google instead:"
       search_google_button: "Google"
       search_button: "Search"
+      search_term_label: "enter search keyword"
 
       type:
         default: "Topics/posts"
@@ -2414,6 +2415,8 @@ en:
           placeholder: minimum
         max_views:
           placeholder: maximum
+        additional_options:
+          label: "Filter by post count and topic views"
 
     hamburger_menu: "go to another topic list or category"
     new_item: "new"
