FEATURE: save local date to calendar
It allows saving local date to calendar.
Modal is giving option to pick between ics and google. User choice can be remembered as a default for the next actions.

--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -3723,6 +3723,16 @@ en:
       favorite_max_not_reached: "Mark this badge as favorite"
       favorite_count: "%{count}/%{max} badges marked as favorite"
 
+    download_calendar:
+      title: "Download calendar"
+      ics: "Download .ics file"
+      google: "Add to Google calendar"
+      remember: "Don’t ask me again"
+      remember_explanation: "(you can change this preference in your user prefs)"
+      download: "Download"
+      default_calendar: "Default calendar"
+      add_to_calendar: "Add to calendar"
+
     tagging:
       all_tags: "All Tags"
       other_tags: "Other Tags"
