FIX: Sam's comments

--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -3731,8 +3731,10 @@ en:
       remember_explanation: "(you can change this preference in your user prefs)"
       download: "Download"
       default_calendar: "Default calendar"
+      default_calendar_instruction: "Determine which calendar should be used when dates are saved"
       add_to_calendar: "Add to calendar"
-
+      google: "Google Calendar"
+      ics: "ICS"
     tagging:
       all_tags: "All Tags"
       other_tags: "Other Tags"
