--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -3164,6 +3164,7 @@ en:
           read_capped:
             one: "and %{count} other read this"
             other: "and %{count} others read this"
+        first_visited_at: "First visited at: %{date}"
         by_you:
           off_topic: "You flagged this as off-topic"
           spam: "You flagged this as spam"
@@ -3323,6 +3324,7 @@ en:
       subcategory_num_featured_topics: "Number of featured topics on parent category's page:"
       all_topics_wiki: "Make new topics wikis by default"
       allow_unlimited_owner_edits_on_first_post: "Allow unlimited owner edits on first post"
+      publish_read_state: "Displays read state of posts"
       subcategory_list_style: "Subcategory List Style:"
       sort_order: "Topic List Sort By:"
       default_view: "Default Topic List:"
