--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -1002,6 +1002,10 @@ en:
       new_private_message: "New Message"
       private_message: "Message"
       private_messages: "Messages"
+      push_notifications_disabled:
+        title: "Push notifications"
+        label: "Disable mobile push notifications"
+
       user_notifications:
         filters:
           filter_by: "Filter By"
