--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -4162,7 +4162,9 @@ en:
           title: Scopes
           granular: Granular
           read_only: Read-only
+          read_only_description: Restrict API key to read-only endpoints.
           global: Global
+          global_description: API key has no restriction and all endpoints are accessible.
           resource: Resource
           action: Action
           allowed_parameters: Allowed Parameters
